Update style 1.0 (3).css

--- a/CSS/style 1.0 (3).css
+++ b/CSS/style 1.0 (3).css
@@ -1,6 +1,5 @@
 				body{
-					background-image: url(1.jpg);
-					background-size: cover;
+					background-color: #1c1b1b;
 					}
 				.div{
 					margin-left: 20%;
