Update style 1.0 (2.2).css

--- a/CSS/style 1.0 (2.2).css
+++ b/CSS/style 1.0 (2.2).css
@@ -1,5 +1,5 @@
 				body{
-					background-image: url(2.jpg);
+					background-image: url(..\Pictures\2.jpg);
 				}
 				#text-1{
 					width: 400px;
