--- a/CSS/style 1.0 (2.1).css
+++ b/CSS/style 1.0 (2.1).css
@@ -1,5 +1,5 @@
 				body{
-					background-image: url(2.jpg);
+					background-image: url(..\Pictures\2.jpg);
 				}
 				.a1{
 					margin-left: 65%;
