--- a/CSS/style 1.0 (3).css
+++ b/CSS/style 1.0 (3).css
@@ -12,23 +12,22 @@
 					border-radius: 5px;
 					text-align: center;
 					outline: none;
-					border: 2px solid #4248f4;
-					box-shadow: 0 0 50px #4248f4;
-					background-color: #c3dff4;
-					color: #474def;
+					border: 3px solid #d1ff3a;
+					box-shadow: 0 0 50px #d1ff3a;
+					background-color: white;
 					font-weight: bold;
 					resize: none;
 				}
 				#text-2	{
-					width: 43%;
+					width: 44%;
 					height: 20px;
 					border-radius: 5px;
 					text-align: center;
 					outline: none;
-					border: 2px solid #4248f4;
-					box-shadow: 0 0 50px #4248f4;
-					background-color: #c3dff4;
-					color: #474def;
+					border: 3px solid #d1ff3a;
+					box-shadow: 0 0 50px #d1ff3a;
+					background-color: white;
+					color: #ffa500;
 					font-weight: bold;
 					resize: none;
 					display: block;
@@ -36,11 +35,10 @@
 				#select{
 					height: 33px;
 					border-radius: 7px;
-					color: #35cece;
-					background-color: #4b4ee5;
-					outline: none;
-					box-shadow: 0 0 20px #0004ff;
-					border: 1px solid #9347e5;
+					background-color: white;
+					outline: none;	
+					box-shadow: 0 0 20px #d1ff3a;
+					border: 3px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
 				}
@@ -58,22 +56,22 @@
 				.span-2{
 					font-size: 20px;
 					font-weight: bold;
-					color: #20e1e8;
+					color: white;
 				}
 				.button-1{
 					height: 33px;
 					border-radius: 7px;
-					color: #35cece;
-					background-color: #4b4ee5;
+					color: black;
+					background-color: #d1ff3a;
 					outline: none;
-					box-shadow: 0 0 20px #0004ff;
-					border: 1px solid #9347e5;
+					box-shadow: 0 0 20px #d1ff3a;
+					border: 1px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
 					margin-left: 89%;
 				}
 				.button-1:active{
-					background-color: #0700ed;
+					background-color: #d1ff3a;
 					color: white;
 				}
 				#button-2:active{
@@ -83,11 +81,10 @@
 				#button-2{
 					height: 33px;
 					border-radius: 7px;
-					color: #35cece;
-					background-color: #4b4ee5;
+					background-color: #d1ff3a;
 					outline: none;
-					box-shadow: 0 0 20px #0004ff;
-					border: 1px solid #9347e5;
+					box-shadow: 0 0 20px #d1ff3a;
+					border: 1px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
 				}
@@ -98,11 +95,11 @@
 				#button-3{
 					height: 33px;
 					border-radius: 7px;
-					color: #35cece;
-					background-color: #4b4ee5;
+					background-color: #d1ff3a;
 					outline: none;
-					box-shadow: 0 0 20px #0004ff;
-					border: 1px solid #9347e5;
+					margin-top: 1%;
+					box-shadow: 0 0 20px #d1ff3a;
+					border: 1px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
 				}
@@ -110,11 +107,10 @@
 					height: 33px;
 					width: 10%;
 					border-radius: 7px;
-					color: #35cece;
-					background-color: #4b4ee5;
+					background-color: white;
 					outline: none;
-					box-shadow: 0 0 20px #0004ff;
-					border: 1px solid #9347e5;
+					box-shadow: 0 0 20px #d1ff3a;
+					border: 3px solid #d1ff3a;
 					font-weight: bold;
 					margin-top: 3%;
 					resize: none;
@@ -139,11 +135,10 @@
 				#button-4{
 					height: 33px;
 					border-radius: 7px;
-					color: #35cece;
-					background-color: #4b4ee5;
+					background-color: #d1ff3a;
 					outline: none;
-					box-shadow: 0 0 20px #0004ff;
-					border: 1px solid #9347e5;
+					box-shadow: 0 0 20px #d1ff3a;
+					border: 1px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
 					margin-left: 89%;
