--- a/CSS/style 1.0 (3).css
+++ b/CSS/style 1.0 (3).css
@@ -1,22 +1,22 @@
 				body{
 					background-color: #1c1b1b;
-					}
+				}
 				.div{
 					margin-left: 20%;
 					margin-right: 20%;
 					margin-top: 10%;
 				}
 				#text-1{
-					width: 50%;
+					width: 53%;
 					height: 20px;
 					border-radius: 5px;
 					text-align: center;
 					outline: none;
 					border: 3px solid #d1ff3a;
-					box-shadow: 0 0 50px #d1ff3a;
 					background-color: white;
 					font-weight: bold;
 					resize: none;
+					font-family: sans-serif;
 				}
 				#text-2	{
 					width: 44%;
@@ -25,22 +25,22 @@
 					text-align: center;
 					outline: none;
 					border: 3px solid #d1ff3a;
-					box-shadow: 0 0 50px #d1ff3a;
 					background-color: white;
 					color: #ffa500;
 					font-weight: bold;
 					resize: none;
 					display: block;
+					font-family: sans-serif;
 				}
 				#select{
 					height: 33px;
 					border-radius: 7px;
 					background-color: white;
 					outline: none;	
-					box-shadow: 0 0 20px #d1ff3a;
 					border: 3px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
+					font-family: sans-serif;
 				}
 				#select:hover{
 					box-shadow: 0 0 20px #c7f400;
@@ -52,11 +52,13 @@
 					font-weight: bold;
 					font-size: 25px;
 					color: #20e1e8;
+					font-family: sans-serif;
 				}
 				.span-2{
 					font-size: 20px;
 					font-weight: bold;
 					color: white;
+					font-family: sans-serif;
 				}
 				.button-1{
 					height: 33px;
@@ -64,11 +66,11 @@
 					color: black;
 					background-color: #d1ff3a;
 					outline: none;
-					box-shadow: 0 0 20px #d1ff3a;
 					border: 1px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
 					margin-left: 89%;
+					font-family: sans-serif;
 				}
 				.button-1:active{
 					background-color: #d1ff3a;
@@ -83,10 +85,10 @@
 					border-radius: 7px;
 					background-color: #d1ff3a;
 					outline: none;
-					box-shadow: 0 0 20px #d1ff3a;
 					border: 1px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
+					font-family: sans-serif;
 				}
 				#button-3:active{
 					background-color: #0700ed;
@@ -98,9 +100,9 @@
 					background-color: #d1ff3a;
 					outline: none;
 					margin-top: 1%;
-					box-shadow: 0 0 20px #d1ff3a;
 					border: 1px solid #d1ff3a;
 					cursor: pointer;
+					font-family: sans-serif;
 					font-weight: bold;
 				}
 				#date{
@@ -109,11 +111,11 @@
 					border-radius: 7px;
 					background-color: white;
 					outline: none;
-					box-shadow: 0 0 20px #d1ff3a;
 					border: 3px solid #d1ff3a;
 					font-weight: bold;
 					margin-top: 3%;
 					resize: none;
+					font-family: sans-serif;
 					font-size: 28px;
 				}
 				#div1{
@@ -137,11 +139,11 @@
 					border-radius: 7px;
 					background-color: #d1ff3a;
 					outline: none;
-					box-shadow: 0 0 20px #d1ff3a;
 					border: 1px solid #d1ff3a;
 					cursor: pointer;
 					font-weight: bold;
 					margin-left: 89%;
+					font-family: sans-serif;
 					margin-top: 1%;
 				}
 				.button-1:hover{
