--- a/CSS/style 1.0 (1).css
+++ b/CSS/style 1.0 (1).css
@@ -2,12 +2,14 @@
 					background-color: #1c1b1b;
 				}
 				.a1{
-					margin-left: 65%;
+					margin-left: 60%;
 					color: #eae1e1;
+					font-family: sans-serif;
 				}
 				.link1{
 					text-decoration: none;
 					color: #ffa500;
+					font-family: sans-serif;
 				}
 				.link1:hover{
 					color: #e2dc16;
@@ -15,13 +17,16 @@
 				.a2{
 					margin-top: 5%;
 					color: #eae1e1;
+					font-family: sans-serif;
 				}
 				.a3{
 					margin-top: 3%;
 					color: #eae1e1;
+					font-family: sans-serif;
 				}
 				.sp1{
 					color: #ffa500;
+					font-family: sans-serif;
 				}
 				.div1{
 					margin-left: 15%;
@@ -49,11 +54,12 @@
 					cursor: pointer;
 					font-size: 30px;
 					color: blue;
+					font-family: sans-serif;
 				}
 				.button:hover{
 					background: #ffc300;
 					transition: width 2s, height 2s, background-color 2s, transform 4s;	
 				}
-				.display{
+				.display{	
 					display: inline-block;
 				}
