--- a/CSS/style 1.0 (2.1).css
+++ b/CSS/style 1.0 (2.1).css
@@ -13,6 +13,7 @@
 					box-shadow: 0 0 30px #00ff5d;
 					color: #4b4ee5;
 					font-weight: bold;
+					font-family: sans-serif;
 				}
 				#text-2{
 					width: 400px;
@@ -25,6 +26,7 @@
 					display: block;
 					box-shadow: 0 0 30px #00ff5d;
 					color: #4b4ee5;
+					font-family: sans-serif;
 				}
 				#text-3{
 					width: 400px;
@@ -37,6 +39,7 @@
 					display: block;
 					box-shadow: 0 0 30px #00ff5d;
 					color: #4b4ee5;
+					font-family: sans-serif;
 
 				}
 				#button{
@@ -51,16 +54,15 @@
 					box-shadow: 0 0 20px #0004ff;
 					border: 1px solid #9347e5;
 					cursor: pointer;
+					font-family: sans-serif;
 					font-weight: bold;
 				}
 				#button:active{
 					background-color: #0700ed;
+					color: white;
 				}
 				#button:hover{
 					box-shadow: 0 0 20px #c7f400;
-				}
-				#button:active{
-					color: white;
 				}
 				#button1{
 					width: 200px;
@@ -74,20 +76,20 @@
 					border: 1px solid #9347e5;
 					cursor: pointer;
 					font-weight: bold;
+					font-family: sans-serif;
 				}
 				#button1:active{
 					background-color: #0700ed;
+					color: white;
 				}
 				#button1:hover{
 					box-shadow: 0 0 20px #c7f400;
-				}
-				#button1:active{
-					color: white;
 				}
 				.h{
 					margin-left: 33%;
 					margin-top: 15%;
 					color: #ffd800;
+					font-family: sans-serif;
 				}
 				.h1{
 					color: red;
@@ -95,6 +97,7 @@
 					display: block;
 					font-size: 20px;
 					font-weight: bold;
+					font-family: sans-serif;
 				}
 				.h2{
 					color: red;
@@ -102,16 +105,19 @@
 					margin-top: 2%;
 					display: block;
 					font-size: 20px;
+					font-family: sans-serif;
 					font-weight: bold;
 				}
 				.span-1{
 					font-weight: bold;
 					font-size: 15px;
 					color: #20e1e8;
+					font-family: sans-serif;
 					margin-left: 33%;
 				}
 				a{
 					text-decoration: none;
+					font-family: sans-serif;
 				}
 				.span-1:hover{
 					color: #4b4ee5;
